cmake_minimum_required(VERSION 3.22)
project(C1 C)

set(CMAKE_C_STANDARD 99)

add_executable(C1 main.c)

add_executable(0001 0001.c)
add_executable(0002 0002.c)
add_executable(0003 0003.c)
add_executable(10926 10926.c)
add_executable(10718 10718.c)
add_executable(1000 1000.c)
add_executable(1001 1001.c)
add_executable(1002 1002.c)
add_executable(1003 1003.c)
add_executable(10869 10869.c)
add_executable(2557 2557.c)
add_executable(18108 18108.c)
add_executable(10430 10430.c)
add_executable(2588 2588.c)
add_executable(10171 10171.c)
add_executable(10172 10172.c)
add_executable(25083 25083.c)
add_executable(1330 1330.c)
add_executable(9498 9498.c)
add_executable(2753 2753.c)
add_executable(14681 14681.c)
add_executable(2884 2884.c)
add_executable(2525 2525.c)
add_executable(2480 2480.c)
add_executable(2739 2739.c)
add_executable(10950 10950.c)
add_executable(8393 8393.c)
add_executable(25304 25304.c)
add_executable(15552 15552.c)
add_executable(11021 11021.c)
add_executable(11022 11022.c)
add_executable(2438 2438.c)
add_executable(2439 2439.c)
add_executable(10871 10871.c)
add_executable(10952 10952.c)
add_executable(10951 10951.c)
add_executable(1110 1110.c)
add_executable(10818 10818.c)
add_executable(2562 2562.c)
add_executable(3052 3052.c)
add_executable(1546 1546.c)
add_executable(8958 8958.c)
add_executable(4344 4344.c)
add_executable(15596 15596.c)
add_executable(4673 4673.c)
add_executable(1065 1065.c)
add_executable(11654 11654.c)
add_executable(11720 11720.c)
add_executable(10809 10809.c)
add_executable(2675 2675.c)
add_executable(1157 1157.c)
add_executable(1152 1152.c)
add_executable(2908 2908.c)
add_executable(5622 5622.c)
add_executable(2941 2941.c)
add_executable(1316 1316.c)
add_executable(1712 1712.c)
add_executable(2292 2292.c)
add_executable(1193 1193.c)